data/derived/comb/progs/unify/prog4911.ml.out
Characters 195-196:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type 'a * (int * int) list -> int list -> int list
       but an expression was expected of type
         'a * (int * int) list -> int list -> 'a * (int * int) list
       Type int list is not compatible with type 'a * (int * int) list 
